# horde-openai-proxy

./: .gitignore  .gitmodules  LICENCE.md  README.md  default_bridge_config.yaml  pyproject.toml
examples/: bridge.py  endpoint.py  request.py
horde_openai_proxy/: __init__.py  conversion.py  horde.py  model.py  template.py  types.py  utils.py
horde_openai_proxy/data/: __init__.py  base_models.py  model_sizes.py  models.py
tests/: test_conversion.py
