[tool.poetry]
name = "horde-openai-proxy"
version = "0.1.0"
description = ""
authors = ["Luke100000 <jonas.peche@aon.at>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
cachetools = "^5.5.0"
fastapi = "^0.114.1"
transformers = "^4.44.2"
sentencepiece = "^0.2.0"
protobuf = "^5.28.1"
jinja2 = "^3.1.4"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.4"
pre-commit = "^3.8.0"
pytest = "^8.3.3"


[tool.poetry.group.fastapi]
optional = true

[tool.poetry.group.fastapi.dependencies]
uvicorn = "^0.30.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
