[tool.poetry]
name = "horde-openai-proxy"
version = "0.1.0"
description = ""
authors = ["Luke100000 <jonas.peche@aon.at>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
cachetools = "*"
fastapi = "*"
transformers = "*"
sentencepiece = "*"
protobuf = "*"
jinja2 = "*"
python-dotenv = "*"


[tool.poetry.group.dev.dependencies]
ruff = "*"
pre-commit = "*"
pytest = "*"


[tool.poetry.group.fastapi]
optional = true

[tool.poetry.group.fastapi.dependencies]
uvicorn = "^0.30.6"


[tool.poetry.group.bridge]
optional = true

[tool.poetry.group.bridge.dependencies]
openai = "^1.45.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
